objects/Learning_Board_Template__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: Learning Board Categories</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Learning Board Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LBT-{00000000}</displayFormat>
        <label>Learning Board Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Board Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>